# getart

./: .editorconfig  .gitattributes  .gitignore  .swiftlint.yml  .yamlfmt.yml  AGENTS.md  Package.resolved  Package.swift  README.md  getart  hk.pkl  justfile  mise.ci.toml  mise.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/actions/check/: action.yml
.github/actions/test/: action.yml
.github/workflows/: check.yml  ci.yml  pull_request.yml  test.yml
.shadowenv.d/: getart.lisp
.swiftpm/xcode/xcshareddata/xcschemes/: getart-Package.xcscheme  getart.xcscheme
Sources/: CodableServerData.swift  MetacodableServerData.swift  ServerData.swift  URLResolver.swift  getart.swift
Sources/getart/Sources/: getart.swift
Sources/getart/Tests/: getartTests.swift
Sources/getart/Tests/test-data/: test-json-no-video.json  test-json-with-video.json  test-page-no-video.html  test-page-with-video.html
Tests/: getartTests.swift
mise/tasks/: build.bash  clean.bash  getart.bash  nuke.bash  run.bash  test.bash
scripts/: update-hk-import
scripts/lib/: common.bash
src/getart/: __init__.py  cli.py  core.py
swift/: Package.resolved
swift/Sources/getart/Sources/: ServerData.swift
swift/Sources/getart/Tests/: getartTests.swift
tests/: test_cli.py  test_cli_integration.py  test_core.py  test_download.py  test_server_data.py
tests/data/: test-json-no-video-only-used-data.json  test-json-no-video.json  test-json-with-video-only-used-data.json
tests/integration/: test_live_cli.py
tests/unit/: test_cli.py  test_core.py  test_server_data.py
