[project]
name = "getart"
version = "2.0.0"
description = "Fetch high-quality Apple Music album artwork and motion artwork assets."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Isaac Halvorson" }]
dependencies = [
    "beautifulsoup4",
    "httpx",
]

[project.scripts]
getart = "getart.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = true
